removend método de mês por período e garbage collector padrão