@@ -12,4 +12,4 @@ COPY --from=build /app/target/*.jar app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-XX:+UseZGC", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
